# verminal

./: .gitignore  README.md  TODO.md  meson.build  sqgipkg.json
.github/workflows/: release.yml
data/: io.github.supercamel.Verminal.desktop  io.github.supercamel.Verminal.metainfo.xml
scripts/: disable-cross-gir.sh  meson-setup-linux.sh
src/: main.vala  terminal_utils.vala  transports.vala  window.vala
